--- a/src/EasyAbp.Abp.SettingUi.Web/Pages/Components/Partials/_Text.cshtml
+++ b/src/EasyAbp.Abp.SettingUi.Web/Pages/Components/Partials/_Text.cshtml
@@ -1,6 +1,6 @@
 ﻿@model EasyAbp.Abp.SettingUi.Web.Pages.Components.SettingHtmlInfo
 
-@if (!Model.Description.IsResourceNotFound)
+@if (!Model.Description.ResourceNotFound)
 {
     <p class="form-text">@Model.Description</p>
 }
