--- a/src/EasyAbp.Abp.SettingUi.Web/Pages/Components/Default.css
+++ b/src/EasyAbp.Abp.SettingUi.Web/Pages/Components/Default.css
@@ -5,6 +5,9 @@
 .card-body .custom-control-label {
     margin-bottom: 20px;
 }
+.card-body button {
+    margin: 5px;
+}
 
 .card-body > label {
     font-weight: bold;
