Use `SettingInfo` instead of `SettingDefinition` to avoid serialize issue

--- a/src/EasyAbp.Abp.SettingUi.Web/Pages/Components/Partials/_Select.cshtml
+++ b/src/EasyAbp.Abp.SettingUi.Web/Pages/Components/Partials/_Select.cshtml
@@ -3,7 +3,7 @@
 
 @{
     string optionStr;
-    if (Model.SettingDefinition.Properties.TryGetValue(SettingUiConst.Options, out var optionList))
+    if (Model.Properties.TryGetValue(SettingUiConst.Options, out var optionList))
     {
         optionStr = optionList.ToString();
     }
@@ -13,10 +13,7 @@
     }
 }
 
-@if (!Model.Description.ResourceNotFound)
-{
 <p class="form-text">@Model.Description</p>
-}
 <select id="@Model.Name" name="@Model.FormName" class="form-control">
     @foreach (var option in optionStr.Split(SettingUiConst.OptionsSeparator))
     {
