--- a/src/EasyAbp.Abp.SettingUi.Web/Pages/Components/Partials/_Text.cshtml
+++ b/src/EasyAbp.Abp.SettingUi.Web/Pages/Components/Partials/_Text.cshtml
@@ -1,4 +1,7 @@
 ﻿@model EasyAbp.Abp.SettingUi.Web.Pages.Components.SettingHtmlInfo
 
+@if (!Model.Description.IsNullOrEmpty())
+{
 <p class="form-text">@Model.Description</p>
+}
 <input type="text" id="@Model.Name" name="@Model.FormName" value="@Model.Value" class="form-control"/>
