add _ViewImports.cshtml file for component

--- a/src/EasyAbp.Abp.SettingUi.Web/Pages/Components/Partials/_Number.cshtml
+++ b/src/EasyAbp.Abp.SettingUi.Web/Pages/Components/Partials/_Number.cshtml
@@ -1,4 +1,4 @@
-﻿@model EasyAbp.Abp.SettingUi.Web.Pages.Components.SettingHtmlInfo
+﻿@model SettingHtmlInfo
 
 @if (!Model.Description.IsNullOrEmpty())
 {
