--- a/src/EasyAbp.Abp.SettingUi.Web/Pages/Components/Default.cshtml
+++ b/src/EasyAbp.Abp.SettingUi.Web/Pages/Components/Default.cshtml
@@ -1,6 +1,6 @@
 ﻿@using EasyAbp.Abp.SettingUi.Localization
 @using Microsoft.AspNetCore.Mvc.Localization
-@model IEnumerable<EasyAbp.Abp.SettingUi.Web.Pages.Components.SettingHtmlInfo>
+@model IEnumerable<SettingHtmlInfo>
 @inject IHtmlLocalizer<SettingUiResource> L
 
 @foreach (var group in Model.GroupBy(sd => sd.Group2))
