--- a/src/EasyAbp.Abp.SettingUi.Web/Pages/Components/Partials/_Select.cshtml
+++ b/src/EasyAbp.Abp.SettingUi.Web/Pages/Components/Partials/_Select.cshtml
@@ -1,7 +1,7 @@
 ﻿@using EasyAbp.Abp.SettingUi
 @using EasyAbp.Abp.SettingUi.Localization
 @using Microsoft.AspNetCore.Mvc.Localization
-@model EasyAbp.Abp.SettingUi.Web.Pages.Components.SettingHtmlInfo
+@model SettingHtmlInfo
 @inject IHtmlLocalizer<SettingUiResource> L
 
 @{
