--- a/src/EasyAbp.Abp.SettingUi.Web/Pages/Components/Partials/_Text.cshtml
+++ b/src/EasyAbp.Abp.SettingUi.Web/Pages/Components/Partials/_Text.cshtml
@@ -1,4 +1,4 @@
-﻿@model EasyAbp.Abp.SettingUi.Web.Pages.Components.SettingHtmlInfo
+﻿@model SettingHtmlInfo
 
 @if (!Model.Description.IsNullOrEmpty())
 {
