Upgrade to ABP 5.0.1 Using abp static proxies

--- a/src/EasyAbp.Abp.SettingUi.Web/Pages/Components/Default.cshtml
+++ b/src/EasyAbp.Abp.SettingUi.Web/Pages/Components/Default.cshtml
@@ -16,8 +16,8 @@
                     <label for="@settingHtmlInfo.Name">@settingHtmlInfo.DisplayName</label>
                     @await Html.PartialAsync($"~/Pages/Components/Partials/_{settingHtmlInfo.Type.ToPascalCase()}.cshtml", settingHtmlInfo)
                 }
-                <abp-button type="submit" button-type="Primary" text="@L["Save"].Value" class="float-right"/>
-                <abp-button button-type="Warning" text="@L["Reset"].Value" class="float-right reset"/>
+                <abp-button type="submit" button-type="Primary" text="@L["Save"].Value" class="float-end"/>
+                <abp-button button-type="Warning" text="@L["Reset"].Value" class="float-end reset"/>
             </abp-card-body>
         </abp-card>
     </form>
