Fix select control style

--- a/src/EasyAbp.Abp.SettingUi.Web/Pages/Components/Partials/_Select.cshtml
+++ b/src/EasyAbp.Abp.SettingUi.Web/Pages/Components/Partials/_Select.cshtml
@@ -20,7 +20,7 @@
 {
 <p class="form-text">@Model.Description</p>
 }
-<select id="@Model.Name" name="@Model.FormName" class="form-control">
+<select id="@Model.Name" name="@Model.FormName" class="form-select">
     @foreach (var option in optionStr.Split(SettingUiConst.OptionsSeparator))
     {
         string selected = option == Model.Value ? "selected" : "";
