--- a/src/EasyAbp.Abp.SettingUi.Web/Pages/Components/Default.css
+++ b/src/EasyAbp.Abp.SettingUi.Web/Pages/Components/Default.css
@@ -1,14 +1,1 @@
-﻿.card {
-    margin-top: 20px;
-}
-.card-body .form-control,
-.card-body .custom-control-label {
-    margin-bottom: 20px;
-}
-.card-body button {
-    margin: 5px;
-}
-
-.card-body > label {
-    font-weight: bold;
-}
+﻿
