fix ver.6.0 save error

--- a/src/EasyAbp.Abp.SettingUi.Web/Pages/Components/Default.cshtml
+++ b/src/EasyAbp.Abp.SettingUi.Web/Pages/Components/Default.cshtml
@@ -21,7 +21,7 @@
                 <hr class="my-4">
                 <div>
                     <abp-button type="submit" button-type="Primary" text="@L["Save"].Value" />
-                    <abp-button button-type="Warning" text="@L["Reset"].Value" />
+                    <abp-button button-type="Warning" text="@L["Reset"].Value" class="reset" />
                 </div>
             </abp-card-body>
         </abp-card>
