--- a/src/EasyAbp.Abp.SettingUi.Web/Pages/Components/Partials/_Text.cshtml
+++ b/src/EasyAbp.Abp.SettingUi.Web/Pages/Components/Partials/_Text.cshtml
@@ -2,6 +2,6 @@
 
 @if (!Model.Description.IsNullOrEmpty())
 {
-<p class="form-text">@Model.Description</p>
+<p class="form-text mt-0 mb-2">@Model.Description</p>
 }
 <input type="text" id="@Model.Name" name="@Model.FormName" value="@Model.Value" class="form-control"/>
