--- a/src/EasyAbp.Abp.SettingUi.Web/Pages/Components/Default.cshtml
+++ b/src/EasyAbp.Abp.SettingUi.Web/Pages/Components/Default.cshtml
@@ -6,7 +6,7 @@
 @foreach (var group in Model.GroupBy(sd => sd.Group2))
 {
     <form method="post" id="@(group.Key)SettingGroup">
-        <abp-card>
+        <abp-card class="mb-3">
             <abp-card-header>
                 <h4>@L[group.Key]</h4>
             </abp-card-header>
@@ -14,11 +14,11 @@
                 @foreach (var settingHtmlInfo in group)
                 {
                     <div class="mb-3">
-                        <label for="@settingHtmlInfo.Name">@settingHtmlInfo.DisplayName</label>
+                        <label class="form-label" for="@settingHtmlInfo.Name">@settingHtmlInfo.DisplayName</label>
                         @await Html.PartialAsync($"~/Pages/Components/Partials/_{settingHtmlInfo.Type.ToPascalCase()}.cshtml", settingHtmlInfo)
                     </div>
                 }
-                <hr class="my-4">
+                <hr class="my-3">
                 <div>
                     <abp-button type="submit" button-type="Primary" text="@L["Save"].Value" />
                     <abp-button button-type="Warning" text="@L["Reset"].Value" class="reset" />
