--- a/src/EasyAbp.Abp.SettingUi.Web/Pages/Components/Default.cshtml
+++ b/src/EasyAbp.Abp.SettingUi.Web/Pages/Components/Default.cshtml
@@ -5,7 +5,7 @@
 
 @foreach (var group in Model.GroupBy(sd => sd.Group2))
 {
-    <form method="post" id="@(group.Key)SettingGroup">
+    <form method="post" id="@(group.Key)SettingGroup" class="setting-ui">
         <abp-card class="mb-3">
             <abp-card-header>
                 <h4>@L[group.Key]</h4>
